<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="quantity"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus_quantity"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:text="-"
            android:textColor="@color/gray_700"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:textColor="@color/gray_700"
            android:textSize="22sp"
            android:textStyle="bold"
            android:elevation="0dp"
            android:background="@color/white"
            android:text="@{String.valueOf(quantity)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_minus_quantity"
            app:layout_constraintRight_toLeftOf="@id/btn_plus_quantity"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus_quantity"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:text="+"
            android:textColor="@color/gray_700"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textSize="22sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
