<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/nav_cart_icon_title"
        app:showAsAction="always"
    />
</menu>