<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
                <variable
                    name="clickListener"
                    type="woowacourse.shopping.feature.goods.adapter.MoreButtonClickListener" />
        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp">

                <Button
                    android:id="@+id/btn_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_more_button"
                    android:onClick="@{() -> clickListener.onCLickMoreButton()}"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>