...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="99,800원" />


        <include
            android:id="@+id/quantitySelector"
            layout="@layout/quantity_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="14dp"
            app:cartItem="@{viewModel.cartItem}"
...
